# pysindy

./: .codecov.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENCE  LICENSE  MANIFEST.in  README.md  README.rst  SINDy.sublime-project  SINDy.sublime-workspace  Untitled.ipynb  Untitled1.ipynb  citation.cff  files_to_check.txt  index.json  info.json  pyproject.toml  regressions.xml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sindy.sublime-project  sindy.sublime-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: draft-pdf.yml  examples.yml  main-to-master.yml  main.yml  master-to-main.yml  notebooks.yml  notify-experiments.yml  pythonpackage.yml  release.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: defaults.py  finite_difference_1D.py  inference.py  inspect_to_sympy.py  joint.py  special.py
docs/: academic.rst  api.rst  conf.py  contributing.rst  contributor_covenant.md  index.rst  objects.rst  summary.rst  tips.rst
docs/JOSS/: paper.bib  paper.md
docs/JOSS1/: codemeta.json  paper.bib  paper.md  paper1.md
docs/JOSS2/: codemeta.json  generate.rb  paper.bib  paper.md
docs/Youtube/: PySINDy.ipynb  data.npy  generate_data.py
docs/templates/: class.rst  hacks.html  sidebarintro.html
example/: context.py  efs.py  ex_efs.py  ex_ffx.py  feature_overview.ipynb  ffx.py  ffx2.py  group_lasso.py  jmap.py  my_sindy.py  net.py  scratch.ipynb  sindy.ipynb  sindy.py  sindy_iterations.py  sindy_paper.ipynb  stridge.py
example/abrupt-sindy/: .gitignore  README.md  requirements.txt
example/data/: PODcoefficients.mat  PODcoefficients_run1.mat
examples/: 10_PDEFIND_examples.ipynb  10_vortexSheddingRe100_example.ipynb  11_SSR_FROLS_examples.ipynb  12_weakform_SINDy_examples.ipynb  13_ensembling.ipynb  13_ensembling_examples.ipynb  14_cavity_flow.ipynb  15_optimizer_comparisons.ipynb  15_pysindy_lectures.ipynb  16_PDE_optimization.ipynb  16_bayesian_sindy.ipynb  16_contour_plot.ipynb  16_parametric_library.ipynb  16_von_karman_trapping_extended.ipynb  17_parametric_library.ipynb  17_trapping_inequality.ipynb  19_bayesian_sindy.ipynb  1_feature_overview.ipynb  2_introduction_to_sindy.ipynb  2_original_paper.ipynb  3_original_paper.ipynb  4_plasma_example.ipynb  4_scikit_learn_compatibility.ipynb  5_differentation.ipynb  5_differentiation.ipynb  6_deeptime_compatibility.ipynb  6_scikit_time_compatibility.ipynb  7_plasma_example.ipynb  8_stableLorenz_example.ipynb  8_trappingSINDyPaper_example.ipynb  8_trapping_sindy_paper_examples.ipynb  9_SINDy-PI_examples.ipynb  9_atmosphericOscillator_example.ipynb  9_sindypi.ipynb  9_sindypi_examples.ipynb  9_sindypi_with_sympy.ipynb  9_vonKarmanStreet_example.ipynb  9_vonKarman_example.ipynb  Linear_model_negative_definite.ipynb  PDEFIND_ShercliffFlow.ipynb  (+7 more)
examples/16_noise_robustness/: 16_benchmark_paper.ipynb  16_dynamical_properties_paper_0.5percentNoise.ipynb  16_dynamical_properties_paper_zeroNoise.ipynb  16_dynamical_properties_paper_zeroNoise_Lasso.ipynb  16_dynamical_properties_paper_zeroNoise_LeastSquares.ipynb  16_dynamical_properties_paper_zeroNoise_MIOSR-Copy1.ipynb  16_dynamical_properties_paper_zeroNoise_MIOSR.ipynb  16_dynamical_properties_paper_zeroNoise_SR3-Copy1.ipynb  16_dynamical_properties_paper_zeroNoise_SR3.ipynb  16_noise_robustness.ipynb  16_noise_robustness_Alan.ipynb  16_scale_separation_invariant_manifolds_noLibraryNormalization.ipynb  complexity_calculator.py  description_lengths  dot_perf_in_dic.json  dot_rmse_in_dic.json  lyapunov_exponents  medl_demo.ipynb  nonlinearity_metric  optimizer_comparison.ipynb  predicted_coefficients.json  r2_playground.ipynb  run_all.py  scale_separation_metric  systems_list_cleaned  threshold_values.json  utils.py  visualization.ipynb  x_perf_in_dic.json  x_rmse_in_dic.json  xdot_coef_error.json  xdot_rmse_error.json  xdot_rmse_history.json  xdot_rmse_pareto_ave.json  xdot_rmse_pareto_std.json
examples/17_linear_stable_models/: Injectors_StateSpaceModel.ipynb  StateSpaceModel.ipynb  example7_reboot.ipynb  viscoelastic_pod_models.ipynb
examples/17_parameterized_pattern_formation/: .gitignore  example.py  parameterized_pattern_formation.ipynb  utils.py
examples/17_pattern_formation/: 17_pattern_formation.ipynb  example.ipynb  example.py
examples/18_linear_stable_models/: StateSpaceModel.ipynb  StateSpaceModel_with_sim_data-Copy1.ipynb  StateSpaceModel_with_sim_data.ipynb  example7_reboot.ipynb  viscoelastic_pod_models.ipynb
examples/19_bayesian_sindy/: example-discrete.ipynb  example.ipynb  example.py
examples/19_trapping_models_extended/: dysts_examples.ipynb  utils.py  von_karman_trapping_extended.ipynb
examples/1_feature_overview/: example.ipynb  example.py
examples/2_introduction_to_sindy/: example.ipynb  example.py  example_data.py  mock_data.py
examples/5_differentiation/: example.ipynb  example.py  example_data.py  mock_data.py  utils.py
examples/8_trapping_sindy_examples/: Ztest.ipynb  dysts_examples.ipynb  dysts_examples.py  example.py  example_dysts.ipynb  example_dysts.py  lorenz_data.mat  requirements.txt  trapping_extended.ipynb  trapping_extended.py  trapping_sindy_paper_examples.py  trapping_utils.py  von_karman_trapping_extended.ipynb  z_utils.py  (+1 more)
pysindy/: __init__.py  _core.py  _sindypi.py  _typing.py  _weak.py  debug.py  deeptime.py  pysindy.py  sssindy.py
sindy/: __init__.py  sindy.py
sparsereg/: __init__.py  _version.py  boats.py  efs.py  ffx.py  net.py  rational.py  sindy.py  util.py  variability.py
test/: conftest.py  test_bindy.py  test_boats.py  test_differentiation.py  test_efs.py  test_examples.py  test_expand_weights.py  test_feature_library.py  test_ffx.py  test_fit_with_weights.py  test_inspect_to_sympy.py  test_notebooks.py  test_optimizers.py  test_optimizers_complexity.py  test_pysindy.py  test_rational.py  test_sample_weights.py  test_scikit_time.py  test_sindy.py  test_sindyc.py  test_sss.py  test_utils.py  test_variability.py  test_weak.py  test_weighting_behavior.py  test_weights_routing.py
(+744 files in other folders)
